FIX version tablette

--- a/css/middle.css
+++ b/css/middle.css
@@ -171,7 +171,7 @@
     }
     
     .text-biberon{
-    top: 20%;
+    top: 15%;
     font-size: 10pt;
     line-height: 15px;
     }
